examples/test/testpolicy7737.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7737
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key15: value26
      key48: value10
      key31: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value25
          key19: value9
      podSelector:
        matchLabels:
          key16: value33
          key42: value6
